--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "rapid-rpc",
   "version": "0.0.1-alpha.0",
   "description": "lightweight, typesafe, and scalable remote procedure calls",
-  "main": "client.js",
-  "module": "esm/client.js",
-  "types": "client.d.ts",
+  "main": "index.js",
+  "module": "esm/index.js",
+  "types": "index.d.ts",
   "files": [
     "index.*",
     "client.*",
@@ -30,7 +30,7 @@
     "prettier:write": "npx prettier --write src/",
     "test": "jest",
     "test:watch": "jest --watchAll",
-    "test:e2e": "cd e2etest && npm test"
+    "test:e2e": "cd e2etest && npm i && npm test"
   },
   "repository": {
     "type": "git",
