--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rapid-rpc",
-  "version": "0.0.1-alpha.0",
+  "version": "0.0.1",
   "description": "lightweight, typesafe, and scalable remote procedure calls",
   "main": "index.js",
   "module": "esm/index.js",
